--- a/app/src/main/res/layout/post_2_to_1.xml
+++ b/app/src/main/res/layout/post_2_to_1.xml
@@ -1,31 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="170dp"
-    android:layout_marginTop="8dp"
+
     android:layout_marginLeft="8dp"
+    android:layout_marginTop="8dp"
     android:layout_marginRight="8dp"
-    android:orientation="vertical">
+    android:orientation="horizontal" >
 
     <fragment
-        android:id="@+id/fragment2"
-        android:name="com.example.delphirestraunt.ui.postSystem.PostFragment"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/fragment3"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <fragment
-        android:id="@+id/fragment3"
+        android:layout_marginRight="4dp"
+        android:id="@+id/p2t1_fragment0"
         android:name="com.example.delphirestraunt.ui.postSystem.PostFragment"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_height="match_parent"
+        android:layout_weight="1.2" />
+
+    <fragment
+        android:layout_marginLeft="4dp"
+        android:id="@+id/p2t1_fragment1"
+        android:name="com.example.delphirestraunt.ui.postSystem.PostFragment"
+        android:layout_height="match_parent"
+        android:layout_weight="0.6"
+        android:layout_width="wrap_content" />
+</LinearLayout>
