--- a/app/src/main/res/layout/post_1_to_1.xml
+++ b/app/src/main/res/layout/post_1_to_1.xml
@@ -1,26 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/p1t1_layout"
     android:layout_width="match_parent"
-    android:layout_height="170dp"
 
+    android:layout_height="170dp"
     android:layout_marginLeft="8dp"
     android:layout_marginTop="8dp"
     android:layout_marginRight="8dp"
-    android:orientation="horizontal" >
+    android:orientation="horizontal">
 
-    <fragment
-        android:layout_marginRight="4dp"
-        android:id="@+id/p2t1_fragment0"
-        android:name="com.example.delphirestraunt.ui.postSystem.PostFragment"
-        android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/p1t1_fragment_socket0"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1" />
+        android:layout_weight="1">
 
-    <fragment
-        android:layout_marginLeft="4dp"
-        android:id="@+id/p2t1_fragment1"
-        android:name="com.example.delphirestraunt.ui.postSystem.PostFragment"
-        android:layout_width="wrap_content"
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/p1t1_fragment_socket1"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1" />
+        android:layout_weight="1">
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
