--- a/app/src/main/res/layout/post_2to1on1.xml
+++ b/app/src/main/res/layout/post_2to1on1.xml
@@ -11,6 +11,7 @@
         android:id="@+id/p2t1o1_fragment_socket0"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginRight="4dp"
         android:layout_weight="3">
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -26,6 +27,7 @@
             android:id="@+id/p2t1o1_fragment_socket1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginBottom="4dp"
             android:layout_weight="1">
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -34,6 +36,7 @@
             android:id="@+id/p2t1o1_fragment_socket2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="4dp"
             android:layout_weight="1">
 
         </androidx.constraintlayout.widget.ConstraintLayout>
