--- a/app/src/main/res/layout/post_2to1on1.xml
+++ b/app/src/main/res/layout/post_2to1on1.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="220dp"
     android:layout_marginLeft="8dp"
@@ -12,9 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginRight="4dp"
-        android:layout_weight="3">
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_weight="3"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
