--- a/app/src/main/res/layout/fragment_filter.xml
+++ b/app/src/main/res/layout/fragment_filter.xml
@@ -2,9 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/filter_fragment_lay"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#5E000000">
+    android:background="#5E000000"
+    android:clickable="true">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
