--- a/app/src/main/res/layout/fragment_filter_main.xml
+++ b/app/src/main/res/layout/fragment_filter_main.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/FilterLay"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="#FFFFFF"
     android:orientation="vertical"
     app:layout_constraintBottom_toBottomOf="parent"
